# Git-Module-Godfather

./: README.md  platformio.ini
Squareline/: Jeepify-Monitor.sll  Jeepify-Monitor.spj  (+1 more)
include/: main.h  (+5 more)
src/Ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.cpp  ui_themes.h
src/Ui/components/: ui_comp.c  ui_comp.h  ui_comp_buttonsensorsmall.c  ui_comp_buttonsensorsmall.h  ui_comp_buttonswitchsmall.c  ui_comp_buttonswitchsmall.h  ui_comp_hook.c  ui_comp_hook.h
src/Ui/images/: ui_img_1134846501.c  ui_img_1156157770.c  ui_img_1253518904.c  ui_img_1404430020.c  ui_img_1464630232.c  ui_img_149381092.c  ui_img_1527887470.c  ui_img_1528892059.c  ui_img_1562670045.c  ui_img_1640860301.c  ui_img_1714525409.c  ui_img_1769637049.c  ui_img_1891462800.c  ui_img_215445388.c  ui_img_315456014.c  ui_img_410295087.c  ui_img_418886360.c  ui_img_44778140.c  ui_img_485462261.c  ui_img_546008632.c  ui_img_551600910.c  ui_img_576858027.c  ui_img_587468927.c  ui_img_694597045.c  ui_img_715952573.c  ui_img_743505413.c  ui_img_888658411.c  ui_img_ansgarmodule_4_png.c  ui_img_btn_off_png.c  ui_img_btn_png.c  ui_img_btnsmall_png.c  ui_img_friedermodule_disp_png.c  ui_img_g3_png.c  ui_img_horstrelais2_png.c  ui_img_jeepifybackground_png.c  ui_img_menubtn1_png.c  ui_img_menubtn2_png.c  ui_img_menubtn3_png.c  ui_img_menubtn4_png.c  ui_img_pdc_png.c  (+2 more)
src/Ui/screens/: ui_ScrEichen.c  ui_ScrJSON.c  ui_ScrMenu.c  ui_ScrMulti.c  ui_ScrPeer.c  ui_ScrPeers.c  ui_ScrPeriph.c  ui_ScrSettings.c  ui_ScrSingle.c  ui_ScrSwitch.c  ui_ScrVolt.c
(+7 files in other folders)
