SET(SOURCES components/ui_comp_buttonsensorsmall.c
    components/ui_comp_buttonswitchsmall.c
    components/ui_comp.c
    screens/ui_ScrMenu.c
    screens/ui_ScrSettings.c
    screens/ui_ScrPeers.c
    screens/ui_ScrJSON.c
    screens/ui_ScrSingle.c
    screens/ui_ScrPeer.c
    screens/ui_ScrEichen.c
    screens/ui_ScrVolt.c
    screens/ui_ScrPeriph.c
    screens/ui_ScrMulti.c
    screens/ui_ScrSwitch.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.cpp
    images/ui_img_576858027.c
    images/ui_img_menubtn1_png.c
    images/ui_img_menubtn2_png.c
    images/ui_img_menubtn3_png.c
    images/ui_img_menubtn4_png.c
    images/ui_img_ansgarmodule_4_png.c
    images/ui_img_friedermodule_disp_png.c
    images/ui_img_horstrelais2_png.c
    images/ui_img_1253518904.c
    images/ui_img_rolfmodule_round_png.c
    images/ui_img_btn_off_png.c
    images/ui_img_btn_png.c
    images/ui_img_1527887470.c
    images/ui_img_551600910.c)

add_library(ui ${SOURCES})
